livesearch results: avoid oberflow of too long email addresses in the people result group

--- a/bc.livesearch/demo.css
+++ b/bc.livesearch/demo.css
@@ -15,6 +15,7 @@ body {
     font-size: .7em;
     border-color: #a3a3a3;
     min-height: 55px;
+    overflow: hidden;
 }
 
 .bc-livesearch-autocomplete-notification {
